@@ -11,3 +11,6 @@
 
 Object-Signature-Portable-.*\.tar\.gz
 
+# QA tests not needed in distribution
+
+^xt/
