@@ -1,5 +1,7 @@
 Revision history for perl distirubton Object-Signature-Portable
 
+  - Added QA tests to the git repo.
+
 v0.1.1  2014-03-11
   [Documentation]
   - Added subsections to the LIMITATIONS section about Portability and
